# amplifier-foundation-rust

./: .dev-machine-assessment.md  .dev-machine-design.md  .gitignore  CONTEXT-TRANSFER.md  Cargo.toml  README.md  SCRATCH.md  STATE.yaml  amplifier_foundation.pyi  pyproject.toml
.dev-machine/: build.yaml  feature-spec-template.md  fix-iteration.yaml  health-check.yaml  iteration.yaml  working-session-instructions.md
.github/workflows/: ci.yml
benches/: core_ops.rs
bindings/python/: Cargo.toml
bindings/python/src/: exceptions.rs  functions.rs  helpers.rs  lib.rs  session.rs  types.rs
crates/amplifier-distro/: Cargo.toml
crates/amplifier-distro/src/: conventions.rs  doctor.rs  error.rs  features.rs  lib.rs  overlay.rs  settings.rs
crates/amplifier-distro/src/session/: backend.rs  metadata.rs  mod.rs  protocol.rs  transcript.rs
crates/amplifier-foundation/: Cargo.toml
crates/amplifier-foundation/examples/: bundle_parse.rs
crates/amplifier-foundation/src/: lib.rs
crates/amplifier-foundation/src/bundle/: helpers.rs  mod.rs  mount.rs  serde.rs  validator.rs
crates/amplifier-foundation/src/cache/: disk.rs  memory.rs
crates/amplifier-foundation/src/io/: files.rs  frontmatter.rs  mod.rs
crates/amplifier-foundation/src/mentions/: dedup.rs  loader.rs  mod.rs  parser.rs  resolver.rs  utils.rs
crates/amplifier-foundation/src/modules/: activator.rs  state.rs
crates/amplifier-foundation/src/paths/: discovery.rs
crates/amplifier-foundation/src/registry/: includes.rs  loader.rs  persistence.rs  types.rs  updates.rs
crates/amplifier-foundation/src/session/: capabilities.rs  events.rs  fork.rs  mod.rs
crates/amplifier-foundation/src/sources/: file.rs  git.rs  http.rs  mod.rs  resolver.rs  zip.rs
crates/amplifier-foundation/src/updates/: mod.rs
crates/amplifier-foundation/tests/: test_bundle.rs  test_cache.rs  test_paths.rs  test_reexports.rs  test_registry.rs  test_serialization.rs  test_tracing.rs  test_updates.rs  test_validator.rs
crates/amplifier-foundation/tests/fixtures/: child-bundle.yaml  minimal.yaml
crates/amplifier-foundation/tests/python/: test_smoke.py
docs/: MIGRATION-BLUEPRINT.md  rust-migration-blueprint-original.md  rust-migration-blueprint-revised.md
examples/: bundle_compose.rs  bundle_parse.rs  path_utils.rs
python/amplifier_foundation/: __init__.py
specs/: architecture.md
specs/features/wave-0/: F-001-cargo-scaffold.md  F-002-error-types.md  F-003-test-port-wave1.md  F-004-test-port-wave2.md  F-005-test-port-wave3.md
specs/modules/: cache.md  dicts.md  paths.md  serialization.md  spawn.md  tracing-utils.md
src/: error.rs  lib.rs  pyo3_bindings.rs  runtime.rs  serialization.rs  tracing_utils.rs
src/bundle/: agent_meta.rs  compose.rs  context.rs  mod.rs  module_resolver.rs  mount.rs  prepared.rs  prompt.rs  validator.rs
src/cache/: disk.rs  memory.rs  mod.rs
src/dicts/: merge.rs  mod.rs  nested.rs
src/io/: files.rs  frontmatter.rs  yaml.rs
src/mentions/: dedup.rs  loader.rs  mod.rs  models.rs  parser.rs  resolver.rs  utils.rs
src/modules/: activator.rs  mod.rs  state.rs
src/paths/: discovery.rs  mod.rs  normalize.rs  uri.rs
src/pyo3_bindings/: exceptions.rs  functions.rs  helpers.rs  mod.rs  session.rs  types.rs
src/registry/: helpers.rs  includes.rs  loader.rs  mod.rs  persistence.rs
src/session/: capabilities.rs  events.rs  fork.rs  mod.rs  slice.rs
src/sources/: file.rs  git.rs  http.rs  mod.rs  resolver.rs  zip.rs
src/spawn/: glob.rs  mod.rs
src/updates/: mod.rs
tests/: integration.rs  test_bundle.rs  test_cache.rs  test_dicts.rs  test_io_files.rs  test_mentions.rs  test_modules.rs  test_paths.rs  test_reexports.rs  test_registry.rs  test_serialization.rs  test_session.rs  test_sources.rs  test_spawn.rs  test_tracing.rs  test_updates.rs  test_validator.rs
tests/fixtures/: bundle.md  full-bundle.yaml  registry-format.yaml
