[package]
name = "amplifier-foundation"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
thiserror = "2"
async-trait = "0.1"
glob = "0.3"
regex = "1"
dirs = "6"
sha2 = "0.10"
zip = { version = "2", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"
tempfile = "3"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = ["git", "http-sources", "zip-sources"]
git = []
http-sources = ["reqwest"]
zip-sources = ["dep:zip"]
pyo3-bindings = ["dep:pyo3"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockall = "0.13"
assert_matches = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }
zip = "2"
sha2 = "0.10"
