[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "amplifier-foundation"
version = "0.1.0"
description = "Rust-powered foundation library for the Amplifier ecosystem"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.maturin]
# Python package tree lives at python/
python-source = "python"
# .so lands inside amplifier_foundation/ as _engine
module-name = "amplifier_foundation._engine"
# Build only the bridge crate (not the workspace root)
manifest-path = "bindings/python/Cargo.toml"
bindings = "pyo3"
# Note: strip=true conflicts with maturin develop's --include-debuginfo.
# Use `maturin build --release --strip` for production wheels instead.
