[package]
name = "amplifier-distro"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Amplifier distribution layer — session backend, overlay, provider catalog, settings"

[dependencies]
amplifier-foundation = { path = "../amplifier-foundation" }
amplifier-core = { path = "../../../amplifier-core/crates/amplifier-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
tempfile = "3"
dirs = "6"
